[package]
name = "halvar"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Jowett <https://github.com/ThomasJowett>"]
description = "A 3D Renderer"
license = "MIT"
repository = "<https://github.com/Thomasjowett/halvar>"

[package.metadata.bundle]
name = "Halvar"
identifier = "com.ThomasJowett.halvar"
# icon = "path/to/icon.icns"

[lib]
name = "halvar"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "halvar_viewer"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
bytemuck = { version = "1.12", features = ["derive"] }
image = "0.24"
anyhow = "1.0"
nalgebra = "0.32"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
